force-app/main/default/objects/Case/fields/AccidentHardness__c.field-meta.xml
<CustomField>
    <fullName>AccidentHardness__c</fullName>
    <label>Severidad de Accidente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin Seleccionar</fullName>
            </value>
            <value>
                <fullName>Alta Inmediata</fullName>
            </value>
            <value>
                <fullName>Muy Leve</fullName>
            </value>
            <value>
                <fullName>Leve</fullName>
            </value>
            <value>
                <fullName>Moderado</fullName>
            </value>
            <value>
                <fullName>Severo</fullName>
            </value>
            <value>
                <fullName>Grave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>