force-app/main/default/objects/Case/fields/AssistanceName__c.field-meta.xml
<CustomField>
    <fullName>AssistanceName__c</fullName>
    <label>Nombre de la asistencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Exequial</fullName>
            </value>
            <value>
                <fullName>Hurto</fullName>
            </value>
            <value>
                <fullName>Médica</fullName>
            </value>
            <value>
                <fullName>Viajes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>