force-app/main/default/objects/Case/fields/Caso_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Caso_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso Relacionado</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>