force-app/main/default/objects/Case/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que almacena los claims de las llamadas de SLE</description>
    <label>Indemnización</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Casos (Indemnización)</relationshipLabel>
    <relationshipName>Indemnizacion</relationshipName>
    <type>Lookup</type>
</CustomField>