force-app/main/default/objects/Case/fields/CS_Nombre_Reclamante__c.field-meta.xml
<CustomField>
    <fullName>CS_Nombre_Reclamante__c</fullName>
    <label>Nombre Reclamante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>