force-app/main/default/objects/Case/fields/CS_NotificationMilestone__c.field-meta.xml
<CustomField>
    <fullName>CS_NotificationMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificacion Milestone</label>
    <type>Checkbox</type>
</CustomField>