force-app/main/default/objects/Case/fields/CS_Numero_Identificacion_Reclamante__c.field-meta.xml
<CustomField>
    <fullName>CS_Numero_Identificacion_Reclamante__c</fullName>
    <label>Número Identificación Reclamante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>