force-app/main/default/objects/Case/fields/CS_Siniestro__c.field-meta.xml
<CustomField>
    <fullName>CS_Siniestro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo relación de búsqueda hacia el objeto Claim (reclamación).</description>
    <label>Número de Siniestro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Claim.RecordTypeId</field>
            <operation>equals</operation>
            <value>Siniestro</value>
        </filterItems>
        <filterItems>
            <field>Claim.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>