force-app/main/default/objects/Case/fields/CS_Tipo_Identificacion_Reclamante__c.field-meta.xml
<CustomField>
    <fullName>CS_Tipo_Identificacion_Reclamante__c</fullName>
    <label>Tipo Identificación Reclamante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>