force-app/main/default/objects/Case/fields/Days_of_Term_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Term_Extensions__c</fullName>
    <description>Cantidad días Extendidos SLE</description>
    <label>Dias extenciones de plazo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>