force-app/main/default/objects/Case/fields/LongTerm__c.field-meta.xml
<CustomField>
    <fullName>LongTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Largo Plazo</label>
    <type>Checkbox</type>
</CustomField>