force-app/main/default/objects/Case/fields/Notification_24_before_Cita_Cirugia__c.field-meta.xml
<CustomField>
    <fullName>Notification_24_before_Cita_Cirugia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification 24 before Cita/Cirugia</label>
    <type>Checkbox</type>
</CustomField>