force-app/main/default/objects/Case/fields/Notification_Cita_Cirugia__c.field-meta.xml
<CustomField>
    <fullName>Notification_Cita_Cirugia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Cita/Cirugía</label>
    <type>Checkbox</type>
</CustomField>