force-app/main/default/objects/Case/fields/prueba__c.field-meta.xml
<CustomField>
    <fullName>prueba__c</fullName>
    <label>prueba</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>