force-app/main/default/objects/Case/fields/QueueRouting__c.field-meta.xml
<CustomField>
    <fullName>QueueRouting__c</fullName>
    <label>Enrutar a cola de asignación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Form_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asesor Virtual</fullName>
            </value>
            <value>
                <fullName>Autogestionable</fullName>
            </value>
            <value>
                <fullName>Autorizaciones</fullName>
            </value>
            <value>
                <fullName>Biológico</fullName>
            </value>
            <value>
                <fullName>Buena Venta</fullName>
            </value>
            <value>
                <fullName>Colmena Gestión</fullName>
            </value>
            <value>
                <fullName>Deudores Vida</fullName>
            </value>
            <value>
                <fullName>Estándares Mínimos</fullName>
            </value>
            <value>
                <fullName>Intermediarios</fullName>
            </value>
            <value>
                <fullName>Línea Información</fullName>
            </value>
            <value>
                <fullName>Novedades</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Servicio al cliente ARL</fullName>
            </value>
            <value>
                <fullName>Servicio al cliente Vida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>