force-app/main/default/objects/Case/fields/type_of_companion_document__c.field-meta.xml
<CustomField>
    <fullName>type_of_companion_document__c</fullName>
    <description>Campo que indica el tipo de documento del acompañante para el agendamiento de formularios medicalización 1 - 5 SLE</description>
    <label>Tipo de documento del acompanante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carné diplomático</fullName>
            </value>
            <value>
                <fullName>Cédula de ciudadanía</fullName>
            </value>
            <value>
                <fullName>Cédula de extranjería</fullName>
            </value>
            <value>
                <fullName>Fideicomiso, fondos de inversión colectiva, fondo o patrimonio autónomo</fullName>
            </value>
            <value>
                <fullName>No informa</fullName>
            </value>
            <value>
                <fullName>Número de identificación tributaria (NIT)</fullName>
            </value>
            <value>
                <fullName>Número único de identificación personal (NUIP)</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>Permiso especial de permanencia (PEP)</fullName>
            </value>
            <value>
                <fullName>Permiso por protección temporal (PPT)</fullName>
            </value>
            <value>
                <fullName>Sociedad extranjera sin NIT en Colombia</fullName>
            </value>
            <value>
                <fullName>Tarjeta de identidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>