force-app/main/default/objects/Case/recordTypes/Agendamiento.recordType-meta.xml
<RecordType>
    <fullName>Agendamiento</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <label>Agendamiento</label>
</RecordType>