force-app/main/default/objects/Case/recordTypes/CS_Buzon.recordType-meta.xml
<RecordType>
    <fullName>CS_Buzon</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <description>Medio de comunicación electrónica a través del cual se reciben las PQRs de los clientes.</description>
    <label>Buzón</label>
</RecordType>