force-app/main/default/objects/Case/recordTypes/CS_Derecho_de_peticion.recordType-meta.xml
<RecordType>
    <fullName>CS_Derecho_de_peticion</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <description>Mecanismo contemplado en la Constitución Nacional, para radicar PQRs ante las entidades.</description>
    <label>Derecho de peticion</label>
</RecordType>