force-app/main/default/objects/Case/recordTypes/CS_Firma_investigadora.recordType-meta.xml
<RecordType>
    <fullName>CS_Firma_investigadora</fullName>
    <active>true</active>
    <businessProcess>CS_Indemnizacion</businessProcess>
    <label>Firma investigadora</label>
</RecordType>