force-app/main/default/objects/Case/recordTypes/CS_Gestion_de_Operaciones.recordType-meta.xml
<RecordType>
    <fullName>CS_Gestion_de_Operaciones</fullName>
    <active>true</active>
    <businessProcess>CS_Indemnizacion</businessProcess>
    <label>Gestión de Operaciones</label>
</RecordType>