force-app/main/default/objects/Case/recordTypes/CS_Incidente.recordType-meta.xml
<RecordType>
    <fullName>CS_Incidente</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <description>Queja que se da con ocasión de una evidencia al interior de la compañía que no fue detectada por el cliente externo</description>
    <label>Incidente</label>
</RecordType>