force-app/main/default/objects/Case/recordTypes/CS_Novedad.recordType-meta.xml
<RecordType>
    <fullName>CS_Novedad</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <description>Modificación o actualización requerida por el Cliente de su póliza o contrato.</description>
    <label>Novedad</label>
</RecordType>