force-app/main/default/objects/Case/recordTypes/CS_Profesional_de_la_Salud.recordType-meta.xml
<RecordType>
    <fullName>CS_Profesional_de_la_Salud</fullName>
    <active>true</active>
    <businessProcess>CS_Indemnizacion</businessProcess>
    <label>Profesional de la Salud</label>
</RecordType>