force-app/main/default/objects/Case/recordTypes/CS_Queja.recordType-meta.xml
<RecordType>
    <fullName>CS_Queja</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <description>Inconformidad manifestada por un Cliente frente al servicio o producto ofrecido.</description>
    <label>Queja</label>
</RecordType>