force-app/main/default/objects/Case/recordTypes/CS_Queja_Superintendencia.recordType-meta.xml
<RecordType>
    <fullName>CS_Queja_Superintendencia</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <description>Inconformidad manifestada por un Cliente a través de la Superintendencia Financiera de Colombia</description>
    <label>Queja Superintendencia</label>
</RecordType>