force-app/main/default/objects/Case/recordTypes/CS_Requerimiento_Juridico.recordType-meta.xml
<RecordType>
    <fullName>CS_Requerimiento_Juridico</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <description>Comunicación de un ente de control dirigido a la compañía, para su gestión</description>
    <label>Requerimiento Jurídico</label>
</RecordType>