force-app/main/default/objects/Case/recordTypes/CS_Solicitud.recordType-meta.xml
<RecordType>
    <fullName>CS_Solicitud</fullName>
    <active>true</active>
    <businessProcess>CS Colmena</businessProcess>
    <description>Solicitud formal para realizar o validar estado de un proceso</description>
    <label>Solicitud</label>
</RecordType>