force-app/main/default/objects/Case/recordTypes/CS_Tutela.recordType-meta.xml
<RecordType>
    <fullName>CS_Tutela</fullName>
    <active>true</active>
    <businessProcess>CS Tutelas</businessProcess>
    <description>Proceso Jurídico notificado a la compañía por parte de un Juez</description>
    <label>Tutela</label>
</RecordType>