force-app/main/default/objects/Case/recordTypes/Excepciones_comercial.recordType-meta.xml
<RecordType>
    <fullName>Excepciones_comercial</fullName>
    <active>true</active>
    <businessProcess>Excepciones comercial</businessProcess>
    <label>Excepción comercial</label>
</RecordType>